# Intuix

./: .gitignore  CMakeLists.txt  README.md  TODO.md  Untitled-1.nnb  imgui.ini  index.js  package-lock.json  package.json  snippets.js  temp.txt
docs/: Adding_Code_Folding_to_ImGui_ColorTextEditor.md  Avalonia_Getting_Started_MacOS.md  PushFont_Refactor_Documentation.md  React_Like_State_Management_for_ImGui.md  TextEditorDependencies.md  cef_integration_instructions.md  chromium_content.md  desktop_apps.md  eval.md  pitch.md  structure_advice.md
docs/folding/: code_folding_roadmap.md  detect_foldable_regions.md
native/: TextEditor.cpp  TextEditor.cpp.orig  asset_map.cpp  color_text_editor.cpp  core.cpp  glfw_bindings.cpp  glfw_functions.cpp  imgui_bindings.cpp  imgui_functions.cpp  imgui_image.cpp  intuix.cpp
native/fonts/: FontAwesome5.cpp  IconsFontAwesome5.h  RobotoBold.cpp  RobotoItalic.cpp  RobotoMonoBold.cpp  RobotoMonoItalic.cpp  RobotoMonoRegular.cpp  RobotoRegular.cpp  fonts.h
native/include/: TextEditor.h  asset_atlas.h  asset_atlas_cells.hpp  asset_map.h  color_text_editor.h  config_fonts.hpp  core.h  glfw_bindings.hpp  glfw_functions.hpp  imgui_bindings.hpp  imgui_functions.hpp  imgui_image.h  style_colors.hpp  texture.h
scratch/: card.cpp  dynamicWindow.js  executeJavaScriptInternally.cpp  glfw_gpt.cpp  scratch.cpp  temp1.cpp
src/: glfwBindings.js  icons.js  imguiBindings.js  imvec2.js  intuixBindings.js
